syntax = "proto3";

package plus.jdk.websocket.protoc;

option java_multiple_files = true;
option java_package = "plus.jdk.websocket.protoc";
option java_outer_classname = "WsBroadcastMessage";
option optimize_for = CODE_SIZE;


enum MessageType {
    MESSAGE_TYPE_TEXT = 0;
    MESSAGE_TYPE_BINARY = 1;
}

message WsMessage {

    optional string message_id = 1;

    optional string uid = 2;

    optional string path = 3;

    optional bytes data = 4;

    optional MessageType type = 5;
}
